# minga

./: .gitignore  COMANDOS.md  DESPLIEGUE-TESTNET.md  ENTREGA-DORAHACKS.md  GUION-VIDEO.md  README.md  REPORTE-2026-06-24.md
contracts/escrow/: Cargo.toml
contracts/escrow/src/: lib.rs  test.rs
contracts/escrow/test_snapshots/test/: flujo_cancelar_devuelve_fondos.1.json  flujo_crear_y_confirmar.1.json
docs/: README.md
entrevistas/: Entrevistas-Minga-Consolidado.docx  como-mostrar-la-app.md  guia-entrevistas.md  instalar-freighter.md  plantilla-resumen.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  config.ts  escrow.ts  stellar.ts  styles.css  wallet.ts
frontend/src/screens/: Comerciante.tsx  Proveedor.tsx
presentacion/: Minga-Pitch.pptx  build-guion-pdf.js  build.js  package-lock.json  package.json  ~$Minga-Pitch.pptx
video/: .gitignore  README.md
